# IS20

./: .gitignore  .pre-commit-config.yaml  AUDIT_IGNORE  Cargo.toml  README.md  codecov.yml  dfx.json
.github/workflows/: audit.yml  build-and-test.yml  build-n-publish.yml  build-test-publish.yml  build-test.yml  build-upgrade.yml  deploy.yml  docs.yml  privacy.yml  publish.yml  rust-audit-check.yml  test.yml  upgrade.yml  version.yml
candid/: IS20.did
scripts/: build.sh  cargo-clippy.sh  cargo-formatter.sh  cargo.test.sh  local-run-tests.sh  redeploy.sh  test.sh
spec/: CHANGELOG.md  IS20.md  changelog.md
src/: api.rs  common.rs  ledger.rs  main.rs  state.rs  tests.rs  types.rs
src/api/: dip20_meta.rs  dip20_transactions.rs  ic20_notify.rs  is20_auction.rs  is20_management.rs  is20_notify.rs
src/common/: Cargo.toml
src/common/src/: types.rs
src/factory/: Cargo.toml  build.rs
src/factory/src/: api.rs  error.rs  lib.rs  main.rs  state.rs  types.rs
src/factory/src/api/: inspect_message.rs
src/factory/tests/: set_token_bytecode.rs
src/token/: Cargo.toml
src/token/api/: Cargo.toml
src/token/api/proptest-regressions/canister/: erc20_transactions.txt
src/token/api/src/: account.rs  canister.rs  error.rs  ledger.rs  lib.rs  main.rs  mock.rs  principal.rs  state.rs  storage.rs  transaction.rs  tx_record.rs  types.rs
src/token/api/src/canister/: erc20_transactions.rs  icrc1_transfer.rs  inspect.rs  is20_auction.rs  is20_notify.rs  is20_transactions.rs  is20a_transactions.rs
src/token/api/src/state/: balances.rs  config.rs  ledger.rs  stats.rs
src/token/api/src/storage/: error.rs  structures.rs
src/token/api/src/types/: account.rs  account_identifier.rs  tx_record.rs
src/token/impl/: Cargo.toml
src/token/impl/src/: canister.rs  lib.rs  main.rs
src/token/impl/tests/: icrc1.rs
src/token/proptest-regressions/canister/: dip20_transactions.txt
src/token/src/: api.rs  canister.rs  core.rs  exports.rs  ledger.rs  lib.rs  main.rs  principal.rs  state.rs  tests.rs  types.rs  utils.rs
src/token/src/api/: dip20_meta.rs  dip20_transactions.rs  inspect.rs  is20_auction.rs  is20_management.rs  is20_notify.rs  is20_transactions.rs
src/token/src/canister/: dip20_transactions.rs  erc20_transactions.rs  inspect.rs  is20_auction.rs  is20_notify.rs  is20_transactions.rs
src/token/src/ledger/: history.rs
src/token/src/types/: tx_record.rs
src/types/: tx_record.rs
