[workspace]
members = [
  "src/token/api",
  "src/token/impl",
  "src/factory",
]

[workspace.package]
version = "1.10.20"
edition = "2021"

[workspace.dependencies]
canister-sdk = { git = "https://github.com/infinity-swap/canister-sdk", package = "canister-sdk", branch = "factory_stable_storage" }
ic-exports = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-exports", branch = "factory_stable_storage" }
ic-stable-structures = { git = "https://github.com/infinity-swap/canister-sdk", branch = "factory_stable_storage" }
