[workspace]
members = [
  "src/token/api",
  "src/token/impl",
  "src/factory",
]

[workspace.package]
version = "1.10.24"
edition = "2021"

[workspace.dependencies]
canister-sdk = { git = "https://github.com/infinity-swap/canister-sdk", package = "canister-sdk", branch = "stable_structures_update" }
ic-exports = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-exports", branch = "stable_structures_update" }
ic-stable-structures = { git = "https://github.com/infinity-swap/canister-sdk", branch = "stable_structures_update" }
