[package]
name = "token-factory"
version.workspace = true
edition.workspace = true


[features]
default = []
export-api = ["canister-sdk/factory-api", "canister-sdk/metrics-api"]

[dependencies]
candid = "0.8"
serde = "1.0"
thiserror = "1.0"
canister-sdk = { git = "https://github.com/infinity-swap/canister-sdk", package = "canister-sdk", tag = "v0.3.29", features = ["factory"] }
ic-exports = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-exports", tag = "v0.3.29" }

token = { path = "../token/api", package = "is20-token" }
