[package]
edition = "2021"
name = "token"
version = "0.1.0"

[features]
default = []
no_api = []

[dependencies]
assert-panic = "1.0"
candid = "0.7"
ic-cdk = { version = "0.3", default-features = false }
ic-cdk-macros = "0.3"
ic-kit = { git = "https://github.com/infinity-swap/ic-kit" }
num-traits = "0.2"
serde = "1.0"
libsecp256k1 = "0.5.0"
sha2 = "0.10.2"
ic-storage = { git = "https://github.com/infinity-swap/ic-helpers.git", package = "ic-storage" }
ic-canister = { git = "https://github.com/infinity-swap/ic-helpers.git", package = "ic-canister" }
ic-helpers = { git = "https://github.com/infinity-swap/ic-helpers.git", package = "ic-helpers" }
ic-ic00-types = { git = "https://github.com/infinity-swap/ic" }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}

[dev-dependencies]
test-case = "1.2.1"
tokio = {version = "1", features = ["macros", "rt"]}
