[package]
edition = "2021"
name = "token"
version = "0.1.1"

[features]
default = []
no_api = []

[dependencies]
assert-panic = "1.0"
candid = "0.7"
common = {path = "../common"}
ic-cdk = "0.5"
ic-cdk-macros = "0.5"
ic-kit = { git = "https://github.com/infinity-swap/ic-kit", tag = "v0.4.5" }
num-traits = "0.2"
serde = "1.0"
ic-storage = { git = "https://github.com/infinity-swap/ic-helpers.git", branch="awkure/metrics", package = "ic-storage" }
ic-canister = { git = "https://github.com/infinity-swap/ic-helpers.git", branch="awkure/metrics", package = "ic-canister"}
ic-certified-map = "0.3"
serde_cbor = "0.11"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}

[dev-dependencies]
test-case = "1.2.1"
tokio = {version = "1", features = ["macros", "rt"]}
