[package]
edition = "2021"
name = "is20-token"
version = "0.2.0"

[features]
default = ["mint_burn", "transfer"]
export_api = ["canister-sdk/auction_api"]

# Enables cycle auctions
auction = ["canister-sdk/auction"]

# Enables claim API related functions
claim = []

# Enables mint and burn API methods. Enabled by default.
mint_burn = []

# Enables API methods for funds transferring. Enabled by default.
transfer = []

[dependencies]
candid = "0.7"
num-traits = "0.2"
serde = "1.0"
serde_cbor = "0.11"
canister-sdk = { git = "https://github.com/infinity-swap/canister-sdk", package = "canister-sdk", tag = "v0.3.22" }
ic-exports = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-exports", tag = "v0.3.22" }
thiserror = "1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
proptest = "1.0.0"
rand = "0.8"
coverage-helper = "0.1"
