[package]
edition = "2021"
name = "is20-token-canister"
version = "0.2.0"

[features]
default = []
export-api = ["token-api/export-api","canister-sdk/metrics-api"]

[dependencies]
candid = "0.8"
serde = "1.0"
canister-sdk = { git = "https://github.com/infinity-swap/canister-sdk", package = "canister-sdk", tag = "v0.3.28", features = ["auction"] }
ic-exports = { git = "https://github.com/infinity-swap/canister-sdk", package = "ic-exports", tag = "v0.3.28" }
token-api = { path = "../api", package = "is20-token", features = ["auction", "claim"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = {version = "1.10.0", features = ["attributes"]}

[dev-dependencies]
coverage-helper = "0.1"
